--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "manogna_demo_app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://teju95.github.io/saree-app",
   "dependencies": {
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.9.0",
@@ -19,9 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -40,8 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "6.3.0"
   }
 }
